--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="renderer" content="webkit" />
     <meta name="force-rendering" content="webkit" />
-    <title>Vite App</title>
+    <title>vite-antd-admin</title>
   </head>
   <body>
     <div id="app"></div>
